<resources>
    <string name="app_name">Purchases</string>

    <string name="product_edit">Edit Product</string>
    <string name="product_create">Add Product</string>

    <string name="empty_product_message">Product cannot be empty</string>
    <string name="product_not_buy">Do not have a products to buy</string>
    <string name="product_to_buy">Add a product a click +</string>
    <string name="delete_product">Delete product</string>
    <string name="buy_product">Buy product</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="product_detail_title">Title</string>
    <string name="product_detail_description">Description</string>
    <string name="product_detail_empty">Product is empty or no data.</string>
    <string name="amount_detail_title">Amount products:</string>
    <string name="product_price_title">Product price:</string>
    <string name="execute_action">Execute action</string>
    <string name="themes_main">Themes</string>
    <string name="fonts_main">Fonts</string>
    <string name="title_activity_settings">Settings</string>

    <string name="product_list_drawer">Product List</string>
    <string name="setting_menu_drawer">Settings</string>


    <!-- Strings related to Themes settings -->

    <string name="pref_theme_key">theme_application</string>
    <string name="pref_themes_type">Themes Application</string>
    <string name="pref_themes_type_dialog_title">Perform Themes Using</string>
    <string name="pref_themes_type_default_value">purple_dark</string>
    <string name="pref_themes_type_summary">Select The Themes</string>
    <string name="pref_themes_type_header">Appearance</string>

    <!-- Themes list setting -->

    <string-array name="pref_themes_type_entries">
        <item>Purple Dark</item>
        <item>Mint Dark</item>
    </string-array>

    <string-array name="pref_themes_type_values">
        <item>purple_dark</item>
        <item>mint_dark</item>
    </string-array>

    <!-- Strings related to Fonts settings -->
    <string name="pref_font_key">fonts_application</string>
    <string name="pref_font_size">Fonts Application</string>
    <string name="pref_font_size_dialog_title">Perform Themes Using</string>
    <string name="pref_font_size_default_value">Medium</string>
    <string name="pref_font_size_summary">Medium</string>
    <string name="pref_font_size_header">Font Size</string>
    <string name="activity_setting_title">Setting</string>
    <string name="form_product_name">Name Product</string>
    <string name="form_product_price">Price Product</string>
    <string name="form_product_amount">Amount Product</string>
    <string name="form_product_buy">Product Buy</string>
    <string name="form_product_error">A fill the all fields of forms.</string>


    <string-array name="pref_font_size_entries">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="pref_font_size_values">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <!--Account activiti-->
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="cancel_button">Cancel</string>
    <string name="confirm_sing_in">Sing In</string>
    <string name="confirm_create_account">Create Account</string>
    <string name="create_account_button_view">Create Account</string>
    <string name="account_create_link_test">No account yet? Create one</string>
    <string name="login_account_text">Already a member? Login</string>
    <string name="login_button_text">Login</string>
    <string name="name">Name</string>
    <string name="create_button_text">Create</string>
    <string name="drawer_nav_content">Drawer navigation content</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="store_list">Store List</string>
    <string name="do_not_store">Do not have favorite stores</string>
    <string name="to_maps">Store on the map</string>
    <string name="find_store">Go to the map and find your favorite store</string>
    <string name="store_name">Store Name</string>
    <string name="store_desc">Store Description</string>
    <string name="store_radius">Store Radius</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="edited_radius">Edition radius</string>
    <string name="your_location">Your location:</string>
    <string name="go_to_stores">Show all store on maps</string>
</resources>
