<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:textSize="?attr/font_medium"
        android:hint="@string/form_product_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:textSize="?attr/font_medium"
        android:hint="@string/form_product_price"
        android:inputType="numberDecimal"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/product_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_price"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:textSize="?attr/font_medium"
        android:hint="@string/form_product_amount"
        android:inputType="numberSigned"
        android:layout_marginLeft="0dp"
        android:layout_alignParentLeft="true" />

    <Switch
        android:id="@+id/product_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_amount"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="27dp"
        android:text="@string/form_product_buy"
        android:textSize="?attr/font_medium"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp" />

    <TextView
        android:id="@+id/product_form_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_buy"
        android:layout_marginTop="47dp"
        android:gravity="center_vertical"
        android:text="@string/form_product_error"
        android:textColor="?attr/primaryTextColor"
        android:textSize="?attr/font_large"/>

</RelativeLayout>