<?xml version="1.0" encoding="utf-8"?>
<purchases.application.purchasescollection.common.componenent.SwipeChildRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refresh_stores_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <RelativeLayout
        android:id="@+id/stores_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical"
        android:focusable="true">

        <LinearLayout
            android:id="@+id/stores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <Button
                android:id="@+id/stores_on_maps"
                android:paddingStart="60dp"
                android:paddingEnd="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_near_me"
                android:drawableTint="?attr/buttonTextColor"
                android:text="@string/go_to_stores"/>

            <ExpandableListView
                android:id="@+id/stores_expand_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="#FFFFFF"
                android:dividerHeight="1dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_stores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/no_stores_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="?attr/font_large"
                android:layout_marginBottom="@dimen/no_product_container_title_margin_bottom"
                android:text="@string/do_not_store" />

            <TextView
                android:id="@+id/no_stores_add"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:textSize="?attr/font_large"
                android:layout_gravity="center_horizontal"
                android:text="@string/find_store" />

        </LinearLayout>
    </RelativeLayout>


</purchases.application.purchasescollection.common.componenent.SwipeChildRefreshLayout>
